# vcore

./: .gitignore  CMakeLists.txt  COPYING  Cargo.toml  EOM.txt  README.en.md  README.md  vrom.img
boot/: boot.bin.vas  boot.map  boot.vas
docs/: index.md  instruction_set.md  interrupt.md  io.md  vas.md  vrisc_device.md
include/: int.h  io.h  types.h  vcore-ioint.h
libvcore/: CMakeLists.txt  int.c  io.c
src/: api.rs  config.rs  debug.rs  debugger.rs  lib.rs  main.rs  memory.rs  utils.rs  vcore.rs  vrisc.rs  vrisc_core.rs
src/debugger/: corehack.rs  debug.rs  memhack.rs  terminal.rs
src/utils/: clock.rs  memory.rs  rdxparse.rs  shared.rs  vrc.rs
src/vrisc/: base.rs  vcore.rs
src/vrisc/vcore/: addresser.rs  dma.rs  intcontroller.rs  iocontroller.rs  regs_flags.rs
src/vrisc_core/: base.rs  inst.rs  memory.rs
vas/: CMakeLists.txt  assembler.cc  assembler.hh  len.cc  len.hh  vas.cc
vrisc/: CMakeLists.txt  device_control.c  device_control.h  device_ctl_pub.c  err.h  intctl.c  intctl.h  ioctl.c  ioctl.h  main.c  memc.c  memc.h  types.h
vrisc/core/: base.c  base.h  pubstruc.h  vrisc.c  vrisc.h
vrisc/debug/: debug.c  debug.h
vrisc/tools/: atou64.c  atou64.h  tools.h  u64toa.c  u64toa.h
vroms/: test1.vas
