[package]
name = "vcore"
version = "0.2.4"
edition = "2021"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }

nix = "0.26.2"
num-traits = { version = "0.2.16", features = ["libm"] }
winapi = { version = "0.3.9", features = ["timeapi", "memoryapi", "processthreadsapi", "handleapi", "errhandlingapi"] }

[features]
debugger = []
